--- a/react_dashboard/dashboard/src/App.css
+++ b/react_dashboard/dashboard/src/App.css
@@ -79,7 +79,7 @@ body {
 .authForm {
     width: 100%;
     max-width: 50%;
-    margin-top: -230px;
+    /* margin-top: -230px; */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -112,7 +112,7 @@ body {
 .tableForm {
     width: 100%;
     max-width: 50%;
-    margin-top: -100px;
+    /* margin-top: -100px; */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -269,7 +269,7 @@ h3 {
     font-size: 3rem;
     text-align: center;
     position: relative;
-    top: -80px;
+    top: 20px;
     color: #2073c0;
 }
 
