--- a/react_dashboard/dashboard/src/buyerDashboard/components/Navigation/Header/Navigation.css
+++ b/react_dashboard/dashboard/src/buyerDashboard/components/Navigation/Header/Navigation.css
@@ -105,6 +105,17 @@
     cursor: pointer;
 }
 
+.register-btn {
+    background-color: green;
+    color: white;
+    padding: 8px 15px;
+    border-radius: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+}
+
 .login-btn:hover {
     background-color: darkgreen;
 }
